# pi-fpv-companion

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: bench-stream.yaml  bench-visdrone.yaml  default.yaml  imx500.yaml  mac-dev.yaml
docs/: architecture-audit.md  ardupilot-vertical-control-research.md  deployment-safety.md  dive-guidance.md  gps-denied-modes.md  guidance.md  hardware.md  how-it-works.md  pi-hardware-todos.md  sitl.md  user-guide.md
models/: imx500_network_yolo11n_visdrone416_pp.rpk
scripts/: camera-ready.sh  check_wire_contract.py  demo_file.py  demo_sitl.py  demo_synthetic.py  demo_webcam.py  deploy.py  fly_sitl.py  hil_standby_check.py  install-pi.sh  learn_hover_sitl.py  measure_dive_sitl.py  probe_nogps_modes.py  profile_nanodet.py  reset-camera.sh  setup-pi-boot.sh  setup-venv.sh  sim_track_dive.py  sitl_gz_attitude.py  sitl_gz_rate.py  sitl_gz_validate.py  sitl_webots_track.py  throttle_probe.py  validate_dive_descent_sitl.py  validate_sitl.py  validate_steep_dive_sitl.py  validate_vrate_sitl.py  wifi-selfheal.sh
systemd/: pi-fpv-companion.service  wifi-selfheal.service  wifi-selfheal.timer
tests/: closed_loop_sim.py  sweep_engagement.py  test_ardupilot_backend.py  test_ardupilot_mapping.py  test_async_detector.py  test_betaflight_backend.py  test_betaflight_mapping.py  test_closed_loop_sim.py  test_color_detector.py  test_config.py  test_cpu_affinity.py  test_drm_framebuffer.py  test_flight_log.py  test_framebuffer.py  test_framing_control.py  test_haar_detector.py  test_imx500_decoder.py  test_iou_associator.py  (+17 more)
(+60 files in other folders)
