[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-fpv-companion"
version = "0.1.0"
description = "Visual target tracking + guidance injection for analog-FPV drones on Raspberry Pi Zero 2W"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "opencv-contrib-python>=4.8",
    "pymavlink>=2.4.40",
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.scripts]
pi-fpv-companion = "pi_fpv_companion.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
